--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -2,12 +2,12 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
-        android:key="@string/pref_units_key"
-        android:title="@string/pref_units_title"
-        android:dialogTitle="@string/pref_units_title"
+        android:key="@string/pref_region_key"
+        android:title="@string/pref_region_title"
+        android:dialogTitle="@string/pref_region_title"
         android:entries="@array/pref_units_entries"
         android:entryValues="@array/pref_units_values"
-        android:defaultValue="@string/pref_units_default_value"
+        android:defaultValue="@string/pref_region_default_value"
         android:summary="%s" />
 
     <EditTextPreference
