--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,20 +23,34 @@
             android:orientation="vertical"
             android:padding="12dp">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/et_search_box"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/forecast_for"
-                android:textColor="#fff"
-                android:textSize="18sp" />
+                android:textSize="24sp"
+                android:hint="Search summoner..."/>
 
-            <TextView
-                android:id="@+id/tv_forecast_location"
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/btn_search"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:textColor="#fff"
-                android:textSize="42sp" />
+                android:text="Search"
+                android:textSize="22sp"/>
+
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/forecast_for"-->
+            <!--android:textColor="#fff"-->
+            <!--android:textSize="18sp" />-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/tv_forecast_location"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="8dp"-->
+            <!--android:textColor="#fff"-->
+            <!--android:textSize="42sp" />-->
 
         </LinearLayout>
 
