further changes to xml layout
main activity and match items being the main changes.

--- a/app/src/main/res/layout/navigation_item.xml
+++ b/app/src/main/res/layout/navigation_item.xml
@@ -9,9 +9,7 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:textSize="30sp"
-        android:textColor="#000"
-        android:drawableStart="@drawable/ic_nav_city"
-        android:drawableLeft="@drawable/ic_nav_city"/>
+        android:textColor="#000"/>
 
     <View
         android:layout_width="match_parent"
