--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#64b1e4</color>
+    <color name="colorPrimaryDark">#0069a6</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorRed">#fc5563</color>
+    <color name="colorBlue">#5789fd</color>
 </resources>
