--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="5dp"
+            android:background="@color/colorPrimary"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/et_search_box"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Search New Profile...."
+                android:textSize="24sp" />
+
+            <Button
+                android:id="@+id/btn_search"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:drawableLeft="@drawable/ic_action_search"
+                android:textSize="22sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:gravity="center_horizontal"
             android:orientation="vertical"
@@ -31,12 +54,13 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/tv_forecast_location"
+                android:id="@+id/tv_summoner_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:textColor="#fff"
-                android:textSize="42sp" />
+                android:textSize="42sp"
+                android:layout_marginStart="8dp" />
 
         </LinearLayout>
 
