activity detailed match view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorRed">#fc5563</color>
     <color name="colorBlue">#5789fd</color>
+    <color name="colorBlueLight">#a6c1fd</color>
 </resources>
