--- a/app/src/main/res/layout/activity_detailed_match_view.xml
+++ b/app/src/main/res/layout/activity_detailed_match_view.xml
@@ -312,7 +312,7 @@
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="@string/match_team_blue"
+                android:text="@string/match_team_red"
                 android:textColor="#000"/>
 
             <TextView
