fixed forecast item

--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -4,17 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:background="@color/colorBlue">
+    tools:background="#ffff">
 
     <TextView
         android:id="@+id/tv_match_date"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:padding="8dp"
         android:text="Month/Day/Year"
         android:textColor="#000"
-        android:textSize="30sp" />
+        android:textSize="25sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +24,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/match_role"/>
+            android:text="@string/match_role"
+            android:textAlignment="center"
+            android:padding="8dp"
+            android:textColor="#000"
+            android:textSize="25sp"/>
 
         <TextView
             android:id="@+id/tv_role"
